@@ -128,6 +128,6 @@ td {
 <script type="text/javascript">
 {$id = $template_name|default:''|md5}
     _smarty_console = window.open("","console{$id}","width=680,height=600,resizable,scrollbars=yes");
-    _smarty_console.document.write("{$debug_output|escape:'javascript'}");
+    _smarty_console.document.write("{$debug_output|escape:'javascript' nofilter}");
     _smarty_console.document.close();
 </script>
